--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
+## macOS system file
+.DS_Store
+
 ## Build generated
 build/
 DerivedData/
@@ -47,6 +50,9 @@ playground.xcworkspace
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
 #
 # Pods/
+Podfile.lock
+*.xcworkspace
+Pods/
 
 # Carthage
 #
