--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,12 +1,12 @@
 # Uncomment the next line to define a global platform for your project
 platform :ios, '10.0'
 
-target 'Example' do
+target 'MFVerficationCodeExample' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
 
   # Pods for Example
-  pod 'MFVerificationCode', :path => '../'
+  pod 'MFVerificationCode'
 
   target 'ExampleTests' do
     inherit! :search_paths
