--- a/Example/Podfile
+++ b/Example/Podfile
@@ -6,7 +6,7 @@ target 'MFVerficationCodeExample' do
   use_frameworks!
 
   # Pods for Example
-  pod 'MFVerificationCode'
+  pod 'MFVerificationCode/Rx', :path => '../'
 
   target 'ExampleTests' do
     inherit! :search_paths
