--- a/Example/Podfile
+++ b/Example/Podfile
@@ -6,16 +6,7 @@ target 'MFVerficationCodeExample' do
   use_frameworks!
 
   # Pods for Example
-  pod 'MFVerificationCode/Rx', :path => '../'
+  pod 'MFVerificationCode', :path => '../'
 
-  target 'ExampleTests' do
-    inherit! :search_paths
-    # Pods for testing
-  end
-
-  target 'ExampleUITests' do
-    inherit! :search_paths
-    # Pods for testing
-  end
 
 end
